Bug #36825 falcon_index_chill_threshold and falcon_record_chill_threshold have values in MB
Submitted: 20 May 2008 19:03 Modified: 8 Jan 2009 11:24
Reporter: Philip Stoev
Status: Closed
Category:Server: Falcon Severity:S3 (Non-critical)
Version:6.0-falcon-team OS:Any
Assigned to: Lars-Erik Bjørk Target Version:6.0.7
Triage: D4 (Minor)

[20 May 2008 19:03] Philip Stoev
Description:
falcon_index_chill_threshold and falcon_record_chill_threshold accept a value in
megabytes. This is:

* non-standard with respect to the rest of the server options, which accept values in
bytes
* prevents from setting the variables to lower than 1mb, which prevents testing of the
chill/thaw mechanism;
* Prevents the user from using the KB, MB and GB modifiers provided by server

How to repeat:
SHOW VARIABLES LIKE '%falcon%threshold%';

Suggested fix:
* convert those options to use values in bytes
* make sure the KB, MB, GB modifiers work
[21 May 2008 18:29] Kevin Lewis
Lars-Erik, Please make this change.
[26 Jun 2008 15:30] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/48567

2720 lars-erik.bjork@sun.com	2008-06-26
      bug#36825 - falcon_index_chill_threshold and falcon_record_chill_threshold have
values in MB
            
      falcon_index_chill_threshold and falcon_record_chill_threshold accept a value in
megabytes. 
      This is non-standard with respect to the rest of the server options, prevents from
setting 
      the variables to lower than 1mb, which prevents testing of the chill/thaw mechanism
and 
      prevents the user from using the KB, MB and GB modifiers provided by server.
                  
      falcon_index_chill_threshold and falcon_record_chill_threshold are now changed to
accept a value 
      in bytes.
            
      The tests falcon_options and falcon_options2 are also changed to work accordingly.
[26 Jun 2008 21:41] Kevin Lewis
Lars-Erik, Good job.  OK to push.
[22 Aug 2008 21:27] Kevin Lewis
Fix is in version 6.0.7
[8 Jan 2009 11:24] MC Brown
A note has been added to the 6.0.6 changelog: 

The falcon_index_chill_threshold and falcon_record_chill_threshold options have been
modified so that the specification for the size can be specified in bytes, and support
the KB, MB, and GB modifiers.